--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -51,7 +51,7 @@ repos:
           entry: gitleaks detect --source .
           language: system
           types: [text]
-          args: ["--no-git", "--config", ".gitleaks.toml", "--verbose"]
+          args: ["--config", ".gitleaks.toml", "--verbose"]
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: 'v1.11.2'
