--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,7 +20,7 @@ repos:
       - id: flake8
         args: [
           --max-line-length=88,
-          "--ignore=E203,E402,E501,E711,E712,E721,E722,F403,F405,F841,W503"
+          "--ignore=E203,E402,E501,E711,E712,E721,E722,F403,F405,W503"
         ]
 
 
