--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,7 +20,7 @@ repos:
       - id: flake8
         args: [
           --max-line-length=88,
-          "--ignore=E203,W503"
+          "--ignore=W503"
         ]
 
 
