--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -75,5 +75,5 @@ jobs:
         id: deploy-to-webapp
         with:
           app-name: 'ase-api-azidp-dev-westus2-001'
-          slot-name: 'Development'
+          slot-name: 'Production'
           
