--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,8 @@ numpy==1.24.3
 fuzzywuzzy==0.18.0
 opencensus==0.11.4
 opencensus-ext-azure==1.1.13
+azure-core==1.31.0 # Added to fix the issue with opencensus-ext-azure
+azure-identity==1.18.0 # Added to fix the issue with opencensus-ext-azure
 Authlib==1.3.2
 email-validator==2.2.0
 passlib==1.7.4
