--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ uvicorn==0.31.0
 sqlalchemy==1.4.27
 sse_starlette==2.1.3
 azure-storage-blob==12.22.0
+azure-data-tables==12.5.0
 psycopg2-binary==2.9.9
 pypdf == 5.0.0
 pytz==2024.1
