--- a/.github/workflows/main_ase-api-azidp-dev-westus2-002.yml
+++ b/.github/workflows/main_ase-api-azidp-dev-westus2-002.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: azure-private-ghhostedrunner-nonprod-001
 
     steps:
       - uses: actions/checkout@v4
@@ -44,7 +44,7 @@ jobs:
             !venv/
 
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: azure-private-ghhostedrunner-nonprod-001
     needs: build
     environment:
       name: 'Production'
