--- a/requirements.txt
+++ b/requirements.txt
@@ -12,8 +12,9 @@ pandas==1.5.3
 numpy==1.24.3
 fuzzywuzzy==0.18.0
 azure-identity==1.17.0 # Added to fix the issue with opencensus-ext-azure
-opencensus==0.11.4
-opencensus-ext-azure==1.1.13
+opentelemetry-api == 1.27.0
+opentelemetry-sdk == 1.27.0
+azure-monitor-opentelemetry == 1.6.2
 Authlib==1.3.2
 email-validator==2.2.0
 passlib==1.7.4
