--- a/.github/workflows/dev001.yml
+++ b/.github/workflows/dev001.yml
@@ -5,9 +5,9 @@
 name: Build and deploy DEV001
 
 on:
-  push:
-    branches:
-      - main
+  # push:
+  #  branches:
+  #    - main
   workflow_dispatch:
 
 jobs:
