--- a/.github/workflows/main_ase-api-azidp-dev-westus2-002.yml
+++ b/.github/workflows/main_ase-api-azidp-dev-westus2-002.yml
@@ -5,9 +5,9 @@
 name: Build and deploy Python app to Azure Web App - ase-api-azidp-dev-westus2-002
 
 on:
-  push:
-    branches:
-      - main
+  # push:
+  #   branches:
+  #     - main
   workflow_dispatch:
 
 jobs:
