--- a/requirements.txt
+++ b/requirements.txt
@@ -42,3 +42,7 @@ Pillow==10.4.0
 RapidFuzz==3.10.1
 rsa
 apscheduler==3.10.4
+beautifulsoup4==4.12.3
+email_validator==2.2.0
+extract-msg==0.52.0
+imgkit==1.2.3
