alembic baseline added

--- a/alembic.ini
+++ b/alembic.ini
@@ -61,8 +61,8 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # output_encoding = utf-8
 
 ; sqlalchemy.url = driver://user:pass@localhost/dbname
-from pfg_app.session.session import SQLALCHEMY_DATABASE_URL
-sqlalchemy.url = %(SQLALCHEMY_DATABASE_URL)s
+
+; sqlalchemy.url = postgresql://postgres:password@localhost/postgres?options=-csearch_path=pfg_test
 
 [post_write_hooks]
 # post_write_hooks defines scripts or Python functions that are run
