--- a/.github/workflows/dev001.yml
+++ b/.github/workflows/dev001.yml
@@ -13,8 +13,7 @@ on:
 
 jobs:
   build:
-    runs-on:
-      group: azure-sharedservices-group-002
+    runs-on: azure-sharedservices-group-002
 
     steps:
       - uses: actions/checkout@v4
@@ -46,7 +45,7 @@ jobs:
             !venv/
 
   deploy:
-      group: azure-sharedservices-group-002
+    runs-on: azure-sharedservices-group-002
     needs: build
     environment:
       name: 'dev'
