--- a/.github/workflows/dev001.yml
+++ b/.github/workflows/dev001.yml
@@ -13,7 +13,8 @@ on:
 
 jobs:
   build:
-    runs-on: azure-sharedservices-group-002
+    runs-on:
+      group: azure-sharedservices-group-002
 
     steps:
       - uses: actions/checkout@v4
@@ -45,7 +46,8 @@ jobs:
             !venv/
 
   deploy:
-    runs-on: azure-sharedservices-group-002
+    runs-on:
+      group: azure-sharedservices-group-002
     needs: build
     environment:
       name: 'dev'
